[package]
name = "rest-rust-users"
version = "0.1.0"
authors = ["Manel Naspreda <manel.naspreda@Manels-MacBook-Pro.local>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]